--- a/index.html
+++ b/index.html
@@ -77,4 +77,61 @@
       <span style="margin-left: 80px">11.3 <a href="chapter11\httpProperties.html" target="_blank">HTTP Properties</a></span><br />
       <span style="margin-left: 80px">11.4 <a href="chapter11\httpError.html" target="_blank">HTTP Error</a></span><br />
       <span style="margin-left: 80px">11.5 <a href="chapter11\httpJSONData.html" target="_blank">HTTP JSON Data</a></span><br />
-         
+<h2>Chapter12:Tables<br /></h2>
+	<span style="margin-left: 80px">12.1 <a href="chapter12\tableData.html" target="_blank">HTTP Service</a></span><br />
+      <span style="margin-left: 80px">12.2 <a href="chapter12\httpServiceGet.html" target="_blank">HTTP Service Get</a></span><br />   
+      <span style="margin-left: 80px">12.3 <a href="chapter12\httpProperties.html" target="_blank">HTTP Properties</a></span><br />
+      <span style="margin-left: 80px">12.4 <a href="chapter12\httpError.html" target="_blank">HTTP Error</a></span><br />
+      <span style="margin-left: 80px">12.5 <a href="chapter12\httpJSONData.html" target="_blank">HTTP JSON Data</a></span><br />
+<h2>Chapter13:Select<br /></h2>
+	<span style="margin-left: 80px">13.1 <a href="chapter13\selectRepeatStringArray.html" target="_blank">Select Repeat with String Array</a></span><br />
+      <span style="margin-left: 80px">13.2 <a href="chapter13\selectOptionsStringArray.html" target="_blank">Select Options with String Array</a></span><br />   
+      <span style="margin-left: 80px">13.3 <a href="chapter13\selectRepeatObjectArray.html" target="_blank">Select Repeat with Object Array</a></span><br />
+      <span style="margin-left: 80px">13.4 <a href="chapter13\selectOptionsObjectArray.html" target="_blank">Select Options with Object Array</a></span><br />
+      <span style="margin-left: 80px">13.5 <a href="chapter13\selectOptionsObject.html" target="_blank">Select Options with Object</a></span><br />
+      <span style="margin-left: 80px">13.6 <a href="chapter13\selectNestedObject.html" target="_blank">Select Nested Object</a></span><br />
+<h2>Chapter14:DOM<br /></h2>
+	<span style="margin-left: 80px">14.1 <a href="chapter14\disabled.html" target="_blank">Disabled</a></span><br />
+      <span style="margin-left: 80px">14.2 <a href="chapter14\show.html" target="_blank">Show</a></span><br />   
+      <span style="margin-left: 80px">14.3 <a href="chapter14\hide.html" target="_blank">Hide</a></span><br />
+<h2>Chapter15:Events<br /></h2>
+	<span style="margin-left: 80px">15.1 <a href="chapter15\mousemove.html" target="_blank">Mousemove</a></span><br />
+      <span style="margin-left: 80px">15.2 <a href="chapter15\click.html" target="_blank">Click</a></span><br />   
+      <span style="margin-left: 80px">15.3 <a href="chapter15\clickfunction.html" target="_blank">Click Function</a></span><br />
+      <span style="margin-left: 80px">15.4 <a href="chapter15\toggle.html" target="_blank">Toggle</a></span><br />
+      <span style="margin-left: 80px">15.5 <a href="chapter15\event.html" target="_blank">Event Object</a></span><br />
+<h2>Chapter16:Form<br /></h2>
+	<span style="margin-left: 80px">16.1 <a href="chapter16\input.html" target="_blank">Input control</a></span><br />
+      <span style="margin-left: 80px">16.2 <a href="chapter16\checkbox.html" target="_blank">Checkbox</a></span><br />   
+      <span style="margin-left: 80px">16.3 <a href="chapter16\radiobutton.html" target="_blank">Radiobutton</a></span><br />
+      <span style="margin-left: 80px">16.4 <a href="chapter16\selectbox.html" target="_blank">Selectbox</a></span><br />
+      <span style="margin-left: 80px">16.5 <a href="chapter16\form.html" target="_blank">Form</a></span><br />
+<h2>Chapter17:Validation<br /></h2>
+	<span style="margin-left: 80px">17.1 <a href="chapter17\inputrequired.html" target="_blank">Input Required Validation</a></span><br />
+      <span style="margin-left: 80px">17.2 <a href="chapter17\emailvalidation.html" target="_blank">Email Validation</a></span><br />   
+      <span style="margin-left: 80px">17.3 <a href="chapter17\forminputstate.html" target="_blank">Forms/Inputs state</a></span><br />
+      <span style="margin-left: 80px">17.4 <a href="chapter17\inputcssvalidation.html" target="_blank">Input fields CSS validation</a></span><br />
+      <span style="margin-left: 80px">17.5 <a href="chapter17\formcssvalidation.html" target="_blank">HTTP Forms CSS Validation</a></span><br />
+      <span style="margin-left: 80px">17.4 <a href="chapter17\customvalidation.html" target="_blank">Custom validation</a></span><br />
+      <span style="margin-left: 80px">17.5 <a href="chapter17\validationexample.html" target="_blank">Validation Example</a></span><br />   
+<h2>Chapter18:Global API<br /></h2>
+	<span style="margin-left: 80px">18.1 <a href="chapter18\lowercaseAPI.html" target="_blank">Lowercase conversion</a></span><br />
+      <span style="margin-left: 80px">18.2 <a href="chapter18\uppercaseAPI.html" target="_blank">Uppercase conversion</a></span><br />   
+      <span style="margin-left: 80px">18.3 <a href="chapter18\stringCheckAPI.html" target="_blank">String check</a></span><br />
+      <span style="margin-left: 80px">18.4 <a href="chapter18\numberCheckAPI.html" target="_blank">Number check</a></span><br />      
+<h2>Chapter19:Includes<br /></h2>
+	<span style="margin-left: 80px">19.1 <a href="chapter19\include.html" target="_blank">Include HTML/AngularJS Code</a></span><br />
+      <span style="margin-left: 80px">19.2 <a href="chapter19\includeCrossDomain.html" target="_blank">Include Cross domain data</a></span><br />   
+<h2>Chapter20:Animation<br /></h2>
+	<span style="margin-left: 80px">20.1 <a href="chapter20\animationModule.html" target="_blank">Animation module</a></span><br />
+      <span style="margin-left: 80px">20.2 <a href="chapter20\animationDependencyModule.html" target="_blank">Animation Dependency module</a></span><br />   
+      <span style="margin-left: 80px">20.3 <a href="chapter20\transitions.html" target="_blank">Transitions</a></span><br />
+      <span style="margin-left: 80px">20.3 <a href="chapter20\animations.html" target="_blank">Animations</a></span><br />
+<h2>Chapter21:Routing<br /></h2>
+	<span style="margin-left: 80px">21.1 <a href="chapter21\routing.html" target="_blank">Routing module</a></span><br />
+      <span style="margin-left: 80px">21.2 <a href="chapter21\ngview1.html" target="_blank">NgView as attribute</a></span><br />   
+      <span style="margin-left: 80px">21.3 <a href="chapter21\ngview2.html" target="_blank">NgView as tag</a></span><br />
+      <span style="margin-left: 80px">21.4 <a href="chapter21\ngview3.html" target="_blank">NgView as CSS class</a></span><br />
+      <span style="margin-left: 80px">21.5 <a href="chapter21\routingControllers.html" target="_blank">Routing with controllers</a></span><br />   
+      <span style="margin-left: 80px">21.6 <a href="chapter21\routingTemplate.html" target="_blank">Routing with template</a></span><br />
+      <span style="margin-left: 80px">21.7 <a href="chapter21\routingOtherwise.html" target="_blank">Routing with otherwise</a></span><br />
